# top200-solo

./: LICENSE  boardgames.txt  pyproject.toml
tests/text_processing/: test_game_matcher.py
top200_solo/: main.py
top200_solo/geekmail/: sender.py
top200_solo/text_processing/: bgg_search.py  game_matcher.py  game_parser.py  lexer.py  parser.out  parsetab.py
